# Synology_photos_exif_scanner

./: Cargo.toml  docker-compose.yaml  flake.nix  rust-toolchain.toml
.github/workflows/: docker.yml
src/: main.rs  media.rs  scan.rs
