[package]
name = "synology_photos_exif_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clokwerk = "0.4"
#logging
log = "0.4"
fern = "0.6"
#output
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
